# SoccerAI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data_labeling.ipynb  pyproject.toml  requirements.txt  rooster.json  rosters.csv  run_enrich.sh
.github/workflows/: mypy.yml  pytest.yml
checkpoints/diffpool/: 0pn6r0jo_val_loss_0.5443.pth
checkpoints/graphgps/: ixnbaufc_val_loss_0.6006.pth
configs/: base.yaml  diffpool.yaml  example.yaml  gatv2.yaml  gcn.yaml  gcn2.yaml  gine.yaml  graphgps.yaml  graphsage.yaml
data/: .pre-commit-config.yaml  config.py  data.py  data_labeling.ipynb  enrich.py  enrich_roosters.py  fbref_utils.py  label.py  stats_scraping.py  transfermarkt_utils.py  utils.py  visualize.py  visualize_old.py
data/scraping/: enrich.py  enrich_roosters.py  fbref.py  run_enrich.sh  transfermarkt.py  utils.py
docs/: _backbones.qmd  _conversion.qmd  _quarto.yml  _results.qmd  custom.scss  index.html  search.json  soccerai.qmd
notebooks/: data_collection.ipynb  data_labeling.ipynb  dataset_creation.ipynb  first_gnn_example.ipynb  role_group.ipynb  test.ipynb  xgboost.ipynb
scripts/: enrich_roosters.py  enrich_rosters.py  eval.py  preload_video_frames.py  train.py
slides/: README.md  _architectures.qmd  _backbones.qmd  _conversion.qmd  _dataset.qmd  _explainability.qmd  _method.qmd  _necks.qmd  _problem.qmd  _quarto.yml  _results.qmd  custom.scss  soccerai.qmd
slides/scripts/: video-restart.js
soccerai/: config.py  trainer.py
soccerai/data/: config.py  converters.py  data.py  dataset.py  label.py  temporal_dataset.py  transformers.py  utils.py  velocity.py  visualize.py
soccerai/models/: __init__.py  backbone.py  backbones.py  diffpool.py  gcn.py  gin.py  head.py  heads.py  layers.py  model.py  models.py  neck.py  necks.py  rgcn.py  tgcn.py  typings.py  utils.py
soccerai/scripts/: run_enrich.sh
soccerai/training/: callbacks.py  metrics.py  trainer.py  trainer_config.py  transforms.py  (+1 more)
tests/: sample_event.json  test_extract_players.py  test_graph_creation.py  test_labeling_consistency.py  test_node_features.py  test_transforms.py
(+26 files in other folders)
