[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name = "Alessio Arcara", email = "alessio.arcara@studio.unibo.it" },
  { name = "Francesco Baiocchi", email = "francesco.baiocchi2@studio.unibo.it" },
  { name = "Leonardo Petrilli", email = "leonardo.petrilli@studio.unibo.it" },
]
dependencies = [
  "polars",
  "mplsoccer",
  "Levenshtein",
  "rapidfuzz",
  "loguru",
  "selenium",
  "tqdm",
  "IPython",
  "ipywidgets",
  "wandb",
]
name = "soccerai"
version = "0.2.0"
requires-python = ">= 3.11"
readme = "README.md"

[project.optional-dependencies]
dev = ["pre-commit", "nbstripout", "ruff", "mypy", "types-requests", "pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"soccerai.data" = ["resources/*"]
