[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name = "Alessio Arcara", email = "alessio.arcara@studio.unibo.it" },
  { name = "Francesco Baiocchi", email = "francesco.baiocchi2@studio.unibo.it" },
  { name = "Leonardo Petrilli", email = "leonardo.petrilli@studio.unibo.it" },
]

dependencies = [
  "torch_geometric",
  "torch_geometric_temporal",
  "torchmetrics",
  "tabulate",
  "scikit-learn",
  "polars",
  "mplsoccer",
  "Levenshtein",
  "rapidfuzz",
  "loguru",
  "selenium",
  "tqdm",
  "IPython",
  "ipywidgets",
  "wandb",
  "wandb[media]",
]
name = "soccerai"
version = "0.6.0"
requires-python = ">= 3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "nbstripout",
  "ruff",
  "mypy",
  "types-requests",
  "pytest",
  "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"soccerai.data" = ["resources/*"]
